ribbit/tests/ui/mismatch_size.stderr
error[E0308]: mismatched types
 --> tests/ui/mismatch_size.rs:7:10
  |
7 | #[derive(ribbit::Pack, Copy, Clone)]
  |          ^^^^^^^^^^^^
  |          |
  |          expected `u16`, found `u8`
  |          arguments to this function are incorrect
  |
note: function defined here
 --> src/lib.rs
  |
  |     pub const unsafe fn loose_to_packed<T: Unpack>(loose: T::Loose) -> T {
  |                         ^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `ribbit::Pack` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> tests/ui/mismatch_size.rs:11:8
   |
11 |     a: A,
   |        ^ evaluation panicked: Annotated size does not equal actual size
   |
note: inside `assert_size_eq::<A>`
  --> src/lib.rs
   |
   | /         assert!(
   | |             expected == <T::Packed as crate::Unpack>::BITS,
   | |             "Annotated size does not equal actual size",
   | |         )
   | |_________^ the failure occurred here

note: erroneous constant encountered
 --> tests/ui/mismatch_size.rs:7:10
  |
7 | #[derive(ribbit::Pack, Copy, Clone)]
  |          ^^^^^^^^^^^^
  |
  = note: this note originates in the derive macro `ribbit::Pack` (in Nightly builds, run with -Z macro-backtrace for more info)
